--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="vl"></div>
-					<img src="images/paperplane.png">
+					<img src="images/paper-plane.png">
 					<h4>Personal</h4>
 					<hr>
 					<p>custom domains</p>
@@ -22,7 +22,7 @@
 				</div> <!-- col -->
 				<div class="col">
 					<div class="vl"></div>
-					<img src="images/aircraft.png">
+					<img src="images/plane.png">
 					<h4>Small Team</h4>
 					<hr>
 					<p>never sleeps</p>
